# SDL2-Opengl_Engine

./: CMakeLists.txt  COPYING  README.md  bootstrap.sh
classmaker/: Makefile  classmaker  main.cpp
engine/: camera.cpp  camera.h  color.cpp  color.h  entity.cpp  entity.h  hudobject.cpp  hudobject.h  image.cpp  image.h  input.cpp  input.h  recoursemanager.cpp  recoursemanager.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shape.cpp  shape.h  sound.cpp  sound.h  text.cpp  text.h  vector2.cpp  vector2.h
engine/shaders/: sprite.frag  sprite.vert
project/: bullet.cpp  bullet.h  creditsscene.cpp  creditsscene.h  enemy.cpp  enemy.h  main.cpp  mainscene.cpp  mainscene.h  menuitem.cpp  menuitem.h  menuscene.cpp  menuscene.h  particle.cpp  particle.h  simpleentity.cpp  simpleentity.h  tower.cpp  tower.h  worker.cpp  worker.h
project/assets/: chooseframe.tga
project/bullets/: bunnybullet.cpp  bunnybullet.h  dogbullet.cpp  dogbullet.h  icebullet.cpp  icebullet.h  robotbullet.cpp  robotbullet.h  turtlebullet.cpp  turtlebullet.h
project/enemies/: duck.cpp  duck.h  trol.cpp  trol.h  ufo.cpp  ufo.h
project/towers/: bunnytower.cpp  bunnytower.h  dogtower.cpp  dogtower.h  icetower.cpp  icetower.h  robottower.cpp  robottower.h  turtletower.cpp  turtletower.h
